--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,7 @@
     <script type="text/javascript">
       $('#ajax_url').click(function(){
           $('#n_url').html("찾는 중입니다...");
+          $('#visit_cnt').html('');
           console.log('ajax');
           $.ajax({
               'url':'/short',
